--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-  <h1> Sobre A Barbearia Rhian</h1>
+  <h1 style="text-align: center"> Sobre A Barbearia Rhian</h1>
+  
+  <p style="text-align: center">Localizado no bairro Ina da Cidade <em>Sao Jose dos Pinhais</em>,aonde a <strong>barbearia Fagundes</strong> e de lá vc saira com o melhor estilo!</p>
+
+  <p style="text-align: center"><em>Nossa missao:<strong>é trazer sua auto-estima e sua qualidade de vida</strong></em></p>
+
+  <p style="text-align: center">oferecemos otimos profissionais e todos antenados nas midias,é um dos melhores atendimentos do PARANA, entao nao deixe de agendar seu horario para mudar de vida!</p>
+  
+  
 </body>
 
 </html>
