--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <body>
-  <h1 style="text-align: center"> Sobre A Barbearia Rhian</h1>
   
-  <p style="text-align: center">Localizado no bairro Ina da Cidade <em>Sao Jose dos Pinhais</em>,aonde a <strong>barbearia Fagundes</strong> e de lá vc saira com o melhor estilo!</p>
+  <img src="banner.jpg">
 
-  <p style="text-align: center"><em>Nossa missao:<strong>é trazer sua auto-estima e sua qualidade de vida</strong></em></p>
+  
+  <h1> Sobre A Barbearia Rhian</h1>
+  
+  <p>Localizado no coração da cidade de <em>Sao Jose dos Pinhais</em>,a <strong>barbearia Fagundes</strong> tras para o mercado o que há de melhor para seu cabelo e barba. Fundada em 2020, a barbearia Rhian já é destaaque na cidade e conquista novos clientes a cada dia. </p>
 
-  <p style="text-align: center">oferecemos otimos profissionais e todos antenados nas midias,é um dos melhores atendimentos do PARANA, entao nao deixe de agendar seu horario para mudar de vida!</p>
+  <p id="missao"><em>Nossa missão é:<strong>"Proporionar auto-estima e qualidade de vida aos clientes"</strong></em></p>
+
+  <p>Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda. O atendimento possuí padrão de excelênia e agilidade, garantindo a satisfação dos nossos clientes. </p>
   
   
 </body>
