--- a/index.html
+++ b/index.html
@@ -9,18 +9,33 @@
 </head>
 
 <body>
-  
-  <img src="banner.jpg">
+    <header>
+       <h1 class="titulo-principal">Barbearia Rhian</h1> 
+    </header>
+
+   <div class="principal">
+  <img id="banner"src="banner.jpg">
 
   
-  <h1> Sobre A Barbearia Rhian</h1>
+  <h2 class="texto-centralizado"> Sobre A Barbearia Rhian</h2>
   
   <p>Localizado no coração da cidade de <em>Sao Jose dos Pinhais</em>,a <strong>barbearia Fagundes</strong> tras para o mercado o que há de melhor para seu cabelo e barba. Fundada em 2020, a barbearia Rhian já é destaaque na cidade e conquista novos clientes a cada dia. </p>
 
   <p id="missao"><em>Nossa missão é:<strong>"Proporionar auto-estima e qualidade de vida aos clientes"</strong></em></p>
 
   <p>Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda. O atendimento possuí padrão de excelênia e agilidade, garantindo a satisfação dos nossos clientes. </p>
-  
+</div>
+  <div class+="beneficios">
+  <h3 class="texto-centralizado">Benefícios</h3>
+
+  <ul>
+    <li>Atendimento aos clientes</li>
+    <li>Espaço diferenciado</li>
+    <li>Localização</li>
+    <li>Profissionais Qualificados</li>
+  </ul>
+  <img src=beneficios.jpg>
+  </div>
   
 </body>
 
