--- a/index.html
+++ b/index.html
@@ -9,34 +9,35 @@
 </head>
 
 <body>
-    <header>
-       <h1 class="titulo-principal">Barbearia Rhian</h1> 
-    </header>
+  <header>
+    <h1 class="titulo-principal">Barbearia Rhian</h1>
+  </header>
 
-   <div class="principal">
-  <img id="banner"src="banner.jpg">
+  <img id="banner" src="banner.jpg">
+  <div class="principal">
+    <h2 class="texto-centralizado"> Sobre a Barbearia Rhian</h2>
 
-  
-  <h2 class="texto-centralizado"> Sobre A Barbearia Rhian</h2>
-  
-  <p>Localizado no coração da cidade de <em>Sao Jose dos Pinhais</em>,a <strong>barbearia Fagundes</strong> tras para o mercado o que há de melhor para seu cabelo e barba. Fundada em 2020, a barbearia Rhian já é destaaque na cidade e conquista novos clientes a cada dia. </p>
+    <p>Localizada no coração da cidade de <em>São José dos pinhais</em>, a <strong>barbearia Rhian</strong> traz para o
+      mercado o que há de melhor para o seu cabelo e barba. fundada em 2020, a barbearia Bativa ja é destaque na cidade
+      e conquista novos clientes a cada dia.</p>
+    <p id="missao"> <em>nossa missão é <strong>"propocionar auto-estima" e qualidade de vida aos clientes".</strong>
+      </em></p>
 
-  <p id="missao"><em>Nossa missão é:<strong>"Proporionar auto-estima e qualidade de vida aos clientes"</strong></em></p>
-
-  <p>Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda. O atendimento possuí padrão de excelênia e agilidade, garantindo a satisfação dos nossos clientes. </p>
-</div>
-  <div class+="beneficios">
-  <h3 class="texto-centralizado">Benefícios</h3>
-
-  <ul>
-    <li>Atendimento aos clientes</li>
-    <li>Espaço diferenciado</li>
-    <li>Localização</li>
-    <li>Profissionais Qualificados</li>
-  </ul>
-  <img src=beneficios.jpg>
+    <p> Oferecemos profissionais experientes e atenados às mudanças no mundo da moda. O atendimento possui padrão de
+      excelência e agilidade, garantido qualidade e satisfação dos nossos clientes. </p>
   </div>
-  
+  <div class="beneficios">
+
+    <h3 class="texto-centralizado"> Beneficios</h3>
+    <ul>
+      <li>Atendimento aos clientes</li>
+      <li>Espaço diferenciado</li>
+      <li>localização</li>
+      <li>Profissionais qualificados</li>
+    </ul>
+    <img class="imagem-beneficio" src=beneficios.jpg>
+  </div>
 </body>
 
 </html>
+
