--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <p>Localizada no coração da cidade de <em>São José dos pinhais</em>, a <strong>barbearia Rhian</strong> traz para o
       mercado o que há de melhor para o seu cabelo e barba. fundada em 2020, a barbearia Rhian ja é destaque na cidade
       e conquista novos clientes a cada dia.</p>
-    <p id="missao"> <em>nossa missão é <strong>"propocionar auto-estima" e qualidade de vida aos clientes".</strong>
-      </em></p>
+    <p id="missao"> <em>nossa missão é <strong>"propocionar auto-estima" e qualidade de vida aos clientes".</strong> </em></p>
 
     <p> Oferecemos profissionais experientes e atenados às mudanças no mundo da moda. O atendimento possui padrão de
       excelência e agilidade, garantido qualidade e satisfação dos nossos clientes. </p>
@@ -30,13 +29,14 @@
 
     <h3 class="texto-centralizado"> Beneficios</h3>
     <ul>
-      <li>Atendimento aos clientes</li>
-      <li>Espaço diferenciado</li>
-      <li>localização</li>
-      <li>Profissionais qualificados</li>
+      <li class="item">Atendimento aos clientes</li>
+      <li class="item">Espaço diferenciado</li>
+      <li class="item">localização</li>
+      <li class="item">Profissionais qualificados</li>
     </ul>
     <img class="imagem-beneficio" src=beneficios.jpg>
   </div>
+  <a href="produtos.html">Produtos</a>
 </body>
 
 </html>
