--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </ul>
     <img class="imagem-beneficio" src=beneficios.jpg>
   </div>
-  <a href="produtos.html">Produtos</a>
+  <a href="Produtos.html">Produtos</a>
 </body>
 
 </html>
