--- a/Produtos.html
+++ b/Produtos.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="Reset.css">
     <link rel="stylesheet" href="produtos.css">
-    <title>produtos - barbearia GODOI</title>
+    <title>produtos - Barbearia Rhian</title>
+    
   </head>
 
   <body>
@@ -39,10 +41,15 @@
          <li>
            <h2>Cabelo + Barba</h2>
            <img src="cabelo+barba.jpg">
-           <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+           <p class="produto-descricao">Pacote completo corte de cabelo e barba</p>
            <p class="produto-preco">R$35:00</p>
          </li>
        </ul>
     </main>
+
+    <footer>
+      <img src="logo-branco.png">
+      <p class="copyright"> Copyrights Barbearia Rhian -2019</p>
+    </footer>
   </body>
 </html>
