--- a/index.html
+++ b/index.html
@@ -14,35 +14,29 @@
   </header>
 
   <img id="banner" src="banner.jpg">
-
   <div class="principal">
-
     <h2 class="texto-centralizado"> Sobre a Barbearia Rhian</h2>
 
-    <p>Localizada no coração da cidade de <em>São José dos Pinhais</em>, a <strong>Barbearia Rhian</strong> traz para
-      o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, a Barbearia Rhian já é destaque na
-      cidade e conquista novos clientes a cada dia.</p>
+    <p>Localizada no coração da cidade de <em>São José dos pinhais</em>, a <strong>barbearia Rhian </strong> traz para o
+      mercado o que há de melhor para o seu cabelo e barba. fundada em 2020, a barbearia Rhian ja é destaque na cidade
+      e conquista novos clientes a cada dia.</p>
+    <p id="missao"> <em>nossa missão é <strong>"propocionar auto-estima" e qualidade de vida aos clientes".</strong>
+      </em></p>
 
-    <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
-          clientes".</strong></em></p>
-
-    <p>Oferecemos profissionais experimentes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
-      excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    <p> Oferecemos profissionais experientes e atenados às mudanças no mundo da moda. O atendimento possui padrão de
+      excelência e agilidade, garantido qualidade e satisfação dos nossos clientes. </p>
   </div>
-
   <div class="beneficios">
-    <h3 class="texto-centralizado">Benefícios</h3>
 
+    <h3 class="texto-centralizado"> Beneficios</h3>
     <ul>
       <li class="item">Atendimento aos clientes</li>
       <li class="item">Espaço diferenciado</li>
-      <li class="item">Localização</li>
+      <li class="item">localização</li>
       <li class="item">Profissionais qualificados</li>
     </ul>
-
-    <img class="imagem-beneficios" src="beneficios.jpg">
+    <img class="imagem-beneficio" src=beneficios.jpg>
   </div>
-
   <a href="Produtos.html">PRODUTOS</a>
 </body>
 
