--- a/contato.html
+++ b/contato.html
@@ -61,8 +61,31 @@
       <label> <input type="checkbox" class="checkbox" checked>Gostaria de receber nossas ofertas por email?</label>
 
 
-      <input type="submit" value="Enviar o formulario" required>
+      <input class='enviar' type="submit" value="Enviar o formulario" required>
     </form>
+
+    <table>
+      <thead>
+        <th>dia</th>
+        <th>horário</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>segunda</td>
+          <td>8h- 20h</td>
+        </tr>
+        <tr>
+          <td>quarta</td>
+          <td>8h- 20h</td>
+        </tr>
+        <tr>
+          <td>sexta</td>
+          <td>8h- 20h</td>
+        </tr>
+        
+      </tbody>
+    </table>
+    
   </main>
   <footer>
     <img src="logo-branco.png">
