--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <link href="reset.css" rel="stylesheet" />
   <link href="produtos.css" rel="stylesheet" />
-  <title> Contato - Barbearia Rhian</title>
+  <title> Contato - Barbearia Bativa</title>
 
 </head>
 
@@ -61,31 +61,30 @@
       <label> <input type="checkbox" class="checkbox" checked>Gostaria de receber nossas ofertas por email?</label>
 
 
-      <input class='enviar' type="submit" value="Enviar o formulario" required>
+      <input class='enviar' classtype="submit" value="Enviar o formulario" required>
     </form>
-
     <table>
       <thead>
-        <th>dia</th>
-        <th>horário</th>
+        <tr>
+          <th>Dia</th>
+          <th>Hórario</th>
+        </tr>
       </thead>
       <tbody>
         <tr>
           <td>segunda</td>
-          <td>8h- 20h</td>
+          <td>8h - 20h</td>
         </tr>
         <tr>
           <td>quarta</td>
-          <td>8h- 20h</td>
+          <td>8h - 20h</td>
         </tr>
         <tr>
-          <td>sexta</td>
-          <td>8h- 20h</td>
+          <td>Sexta </td>
+          <td>8h - 20h</td>
         </tr>
-        
       </tbody>
     </table>
-    
   </main>
   <footer>
     <img src="logo-branco.png">
