--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <link href="reset.css" rel="stylesheet" />
   <link href="produtos.css" rel="stylesheet" />
-  <title> Contato - Barbearia Bativa</title>
+  <title> Contato - Barbearia Rhian</title>
 
 </head>
 
