--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
   </div>
     
   </main>
+  <footer>
+    <img src="logo-branco.png">
+    <p class="copyrights Barbearia Alura - 2019"></p>
+  </footer>
+  
 </body>
 
 </html>
